copr-be: correct typo in the loop

--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -463,9 +463,13 @@ server.upload-dirs = ( "/var/tmp" )
 ##
 #######################################################################
 
+{% for https_bind in ["0.0.0.0:443", "[::]:443"] %}
+# we need to have this twice, once for IPv4 and once for IPv6, see:
+# https://redmine.lighttpd.net/projects/lighttpd/wiki/IPv6-Config#Recommended-IPv6-setup
+
 {% if not devel %}
 # production still uses normal configuration
-$SERVER["socket"] == "0.0.0.0:443" {
+$SERVER["socket"] == "{{ https_bind }}" {
   ssl.engine = "enable"
   ssl.pemfile = "/etc/lighttpd/copr.fedorainfracloud.org.pem"
   ssl.ca-file = "/etc/lighttpd/copr.fedorainfracloud.org.intermediate.crt"
@@ -484,8 +488,6 @@ $HTTP["url"] =~ "^/.well-known/" {
 }
 
 # Enable HTTPS
-{% for https_bind in ["0.0.0.0:443", "[::]:443"] %}
-# we need to have this twice: https://redmine.lighttpd.net/projects/lighttpd/wiki/IPv6-Config#Recommended-IPv6-setup
 $SERVER["socket"] == "{{ https_bind }}" {
     ssl.engine              = "enable"
 {% for hostname, _ in letsencrypt.certificates.items()  %}
