oraculum: More fighting with container names

--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -31,7 +31,7 @@ spec:
         deploymentconfig: oraculum
     spec:
       containers:
-      - name: oraculum
+      - name: oraculum-api-endpoint
         image: packager-dashboard:latest
         ports:
         - containerPort: 5000
