oraculum: wire up secret.yml into the playbook

--- a/playbooks/openshift-apps/packager-dashboard.yml
+++ b/playbooks/openshift-apps/packager-dashboard.yml
@@ -75,6 +75,11 @@
     file: service.yml
     objectname: service.yml
 
+  - role: openshift/object
+    app: oraculum
+    template: secret.yml
+    objectname: secret.yml
+
   - role: openshift/route
     app: oraculum
     routename: packager-dashboard
