--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -118,8 +118,8 @@ spec:
           containerName: oraculum-worker
           # Oraculum would automatically proceed with upgrade_db if necessary
           # init_db isn't dropping anything, so it's safe to call every time the pod starts
-          command: ["/bin/sh","-c"]
-          args: ["python /opt/app-root/src/oraculum/cli.py init_db && /usr/bin/celery -A oraculum.celery_app worker -c 2 --loglevel=INFO"]
+          command: ["/bin/sh"]
+          args: ["-c", "python /opt/app-root/src/oraculum/cli.py init_db && /usr/bin/celery -A oraculum.celery_app worker -c 2 --loglevel=INFO"]
           volumes:
            - oraculum-secret-volume
   template:
@@ -202,8 +202,8 @@ spec:
           containerName: oraculum-beat
           # Oraculum would automatically proceed with upgrade_db if necessary
           # init_db isn't dropping anything, so it's safe to call every time the pod starts
-          command: ["/bin/sh","-c"]
-          args: ["python /opt/app-root/src/oraculum/cli.py init_db && /usr/bin/celery -A oraculum.celery_app beat --loglevel=INFO"]
+          command: ["/bin/sh"]
+          args: ["-c", "python /opt/app-root/src/oraculum/cli.py init_db && /usr/bin/celery -A oraculum.celery_app beat --loglevel=INFO"]
           volumes:
            - oraculum-secret-volume
   template:
