--- a/roles/openshift-apps/oraculum/files/service.yml
+++ b/roles/openshift-apps/oraculum/files/service.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: packager-dashboard
+    app: oraculum
   name: packager-dashboard
 spec:
   ports:
@@ -12,14 +12,14 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: packager-dashboard
-    deploymentconfig: packager-dashboard
+    app: oraculum
+    deploymentconfig: oraculum
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: packager-dashboard
+    app: oraculum
   name: packager-dashboard-redis
 spec:
   ports:
@@ -28,5 +28,5 @@ spec:
     protocol: TCP
     targetPort: 6379
   selector:
-    app: packager-dashboard-redis
-    deploymentconfig: packager-dashboard-redis
+    app: oraculum
+    deploymentconfig: oraculum
