--- a/roles/openshift-apps/oraculum/files/service.yml
+++ b/roles/openshift-apps/oraculum/files/service.yml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   labels:
     app: oraculum
-  name: packager-dashboard
+  name: oraculum-api-endpoint
 spec:
   ports:
   - name: 5000-tcp
@@ -13,14 +13,14 @@ spec:
     targetPort: 8080
   selector:
     app: oraculum
-    deploymentconfig: oraculum
+    deploymentconfig: oraculum-api-endpoint
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     app: oraculum
-  name: packager-dashboard-redis
+  name: oraculum-redis
 spec:
   ports:
   - name: 6379-tcp
@@ -29,4 +29,4 @@ spec:
     targetPort: 6379
   selector:
     app: oraculum
-    deploymentconfig: oraculum
+    deploymentconfig: oraculum-redis
