--- a/roles/releng/tasks/main.yml
+++ b/roles/releng/tasks/main.yml
@@ -154,7 +154,7 @@
 
 - name: make a mnt/koji link
   file: state=link src=/mnt/fedora_koji/koji dest=/mnt/koji
-  when: "'releng_compose' in group_names or 'releng_stg' in group_names"
+  when: "'releng_compose' in group_names or 'releng_compose_stg' in group_names"
 
 # Add skopeo for OCI Image management, only in stage first for testing
 - name: add pkgs for OCI Image management
