the-new-hotness: Change log level to ERROR
This is a temporary fix for
https://github.com/fedora-infra/the-new-hotness/issues/316

Signed-off-by: Michal Konečný <mkonecny@redhat.com>

--- a/roles/openshift-apps/the-new-hotness/templates/config.toml
+++ b/roles/openshift-apps/the-new-hotness/templates/config.toml
@@ -64,7 +64,7 @@ propagate = false
 handlers = ["console"]
 
 [log_config.root]
-level = "INFO"
+level = "ERROR"
 handlers = ["console"]
 
 # the-new-hotness consumer configuration
