the-new-hotness: Change fedora-messaging log level to ERROR
This is a temporary fix for
https://github.com/fedora-infra/the-new-hotness/issues/316

The log level change for root log didn't helped, so let's try to also
change the fedora messaging log level

Signed-off-by: Michal Konečný <mkonecny@redhat.com>

--- a/roles/openshift-apps/the-new-hotness/templates/config.toml
+++ b/roles/openshift-apps/the-new-hotness/templates/config.toml
@@ -59,7 +59,7 @@ formatter = "simple"
 stream = "ext://sys.stdout"
 
 [log_config.loggers.fedora_messaging]
-level = "INFO"
+level = "ERROR"
 propagate = false
 handlers = ["console"]
 
