ipa/client: leave out unset host group description
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/common.yml
+++ b/roles/ipa/client/tasks/common.yml
@@ -9,7 +9,7 @@
 - name: Ensure IPA host group exists
   ipahostgroup:
     name: "{{ ipa_host_group }}"
-    description: "{{ ipa_host_group_desc | default(ipa_host_group) }}"
+    description: "{{ ipa_host_group_desc | default(omit) }}"
     ipaadmin_password: "{{ ipa_admin_password }}"
     state: present
 
