--- a/roles/openshift-apps/the-new-hotness/templates/config.toml
+++ b/roles/openshift-apps/the-new-hotness/templates/config.toml
@@ -59,12 +59,12 @@ formatter = "simple"
 stream = "ext://sys.stdout"
 
 [log_config.loggers.fedora_messaging]
-level = "ERROR"
+level = "INFO"
 propagate = false
 handlers = ["console"]
 
 [log_config.root]
-level = "ERROR"
+level = "INFO"
 handlers = ["console"]
 
 # the-new-hotness consumer configuration
