--- a/roles/openshift-apps/the-new-hotness/templates/buildconfig.yml
+++ b/roles/openshift-apps/the-new-hotness/templates/buildconfig.yml
@@ -57,6 +57,8 @@ items:
 {% endif %}
     strategy:
       type: Docker
+      dockerStrategy:
+        noCache: true
     output:
       to:
         kind: ImageStreamTag
