--- a/playbooks/openshift-apps/oraculum.yml
+++ b/playbooks/openshift-apps/oraculum.yml
@@ -88,6 +88,13 @@
     serviceport: 8080-tcp
     servicename: oraculum-api-endpoint
 
+  - role: openshift/route
+    app: oraculum
+    routename: oraculum-frontend
+    host: "packager-dashboard{{ env_suffix }}.fedoraproject.org"
+    serviceport: 8080-tcp
+    servicename: oraculum-frontend
+
   - role: openshift/start-build
     app: oraculum
     buildname: packager-dashboard-build
