oraculum: Ups, fixup build ref

--- a/roles/openshift-apps/oraculum/templates/buildconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/buildconfig.yml
@@ -36,7 +36,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: packager-dashboard-frontend:latest
+      name: oraculum-frontend:latest
   source:
     type: Git
     git:
