oraculum: Try to specify more to a tag

--- a/roles/openshift-apps/oraculum/templates/imagestream.yml
+++ b/roles/openshift-apps/oraculum/templates/imagestream.yml
@@ -29,5 +29,8 @@ spec:
     local: false
   tags:
   - name: latest
+    from:
+      kind: ImageStreamTag
+      name: oraculum-frontend
 status:
   dockerImageRepository: ""
