oraculum: Try to bringup flower

--- a/roles/openshift-apps/oraculum/files/service.yml
+++ b/roles/openshift-apps/oraculum/files/service.yml
@@ -20,6 +20,22 @@ kind: Service
 metadata:
   labels:
     app: oraculum
+  name: oraculum-flower
+spec:
+  ports:
+  - name: 8080-tcp
+    port: 8080
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: oraculum
+    deploymentconfig: oraculum-flower
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: oraculum
   name: oraculum-redis
 spec:
   ports:
