--- a/playbooks/openshift-apps/oraculum.yml
+++ b/playbooks/openshift-apps/oraculum.yml
@@ -90,6 +90,14 @@
 
   - role: openshift/route
     app: oraculum
+    routename: oraculum-flower
+    host: "packager-dashboard{{ env_suffix }}.fedoraproject.org"
+    path: "/_flower"
+    serviceport: 8080-tcp
+    servicename: oraculum-flower
+
+  - role: openshift/route
+    app: oraculum
     routename: oraculum-frontend
     host: "packager-dashboard{{ env_suffix }}.fedoraproject.org"
     serviceport: 8080-tcp
