oraculum: Try haproxy rewrite for flower

--- a/playbooks/openshift-apps/oraculum.yml
+++ b/playbooks/openshift-apps/oraculum.yml
@@ -95,6 +95,8 @@
     path: "/_flower"
     serviceport: 8080-tcp
     servicename: oraculum-flower
+    annotations:
+      haproxy.router.openshift.io/rewrite-target: /
 
   - role: openshift/route
     app: oraculum
