Add a centos-koji user in rabbitmq that corresponds to the certs generated for us
Note: this is indeed a different user from the one listed before it.
koji-centos is used for mbbox.

Relates to: https://pagure.io/fedora-infrastructure/issue/9603

--- a/roles/rabbitmq_cluster/tasks/apps.yml
+++ b/roles/rabbitmq_cluster/tasks/apps.yml
@@ -125,6 +125,13 @@
     name: rabbit/user
   vars:
      username: koji-centos{{ env_suffix }}
+
+- name: CentOS Stream Koji User
+  run_once: true
+  include_role:
+    name: rabbit/user
+  vars:
+     username: centos-koji
 # CENTOS KOJI END
 
 # CENTOS ODCS BEGIN
