rabbitmq cluster / osci queues: adjust so playbook doesn't fail on trying to change queues
The osci queue's have changed since this playbook last completed.
The ttl changed and the routing keys have changed.
The ansible rabbitmq module can't change these things on already created
queues because the api doesn't allow it. This makes this playbook fail
with:

"RabbitMQ RESTAPI doesn't support attribute changes for existing
queues"

So, for now, set the ttl to what it already is, and don't change the
routing keys at all. Hopefully this will get it to complete and osci can
manage at least routing keys themseleves wherever they do that.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/rabbit/queue/tasks/main.yml
+++ b/roles/rabbit/queue/tasks/main.yml
@@ -86,6 +86,7 @@
     login_user: admin
     login_password: "{{ (env == 'production')|ternary(rabbitmq_admin_password_production, rabbitmq_admin_password_staging) }}"
   loop: "{{ routing_keys }}"
+  when: routing_keys is defined
   tags:
     - fedora-messaging
     - rabbitmq_cluster
@@ -103,6 +104,7 @@
     login_user: admin
     login_password: "{{ (env == 'production')|ternary(rabbitmq_admin_password_production, rabbitmq_admin_password_staging) }}"
   loop: "{{ routing_keys }}"
+  when: routing_keys is defined
   tags:
     - fedora-messaging
     - rabbitmq_cluster
