--- a/roles/openshift-apps/fedocal/files/deploymentconfig.yml
+++ b/roles/openshift-apps/fedocal/files/deploymentconfig.yml
@@ -40,6 +40,9 @@ spec:
         - name: config-volume
           mountPath: /opt/app-root/config/
           readOnly: true
+        - name: secret-volume
+          mountPath: /opt/app-root/secret/
+          readOnly: true
         readinessProbe:
           timeoutSeconds: 1
           initialDelaySeconds: 5
@@ -56,6 +59,9 @@ spec:
       - name: config-volume
         configMap:
           name: fedocal-configmap
+      - name: secret-volume
+        configMap:
+          name: fedocal-secret
 
   triggers:
   - type: ConfigChange
