fedoca: fix the configurations for the new url and secret location
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/templates/fedocal.cfg
+++ b/roles/openshift-apps/fedocal/templates/fedocal.cfg
@@ -14,6 +14,8 @@ DB_URL='postgresql://{{ fedocal_db_user }}:{{ fedocal_db_pass }}@db01.iad2.fedor
 {% endif %}
 
 
+OIDC_CLIENT_SECRETS = '/opt/app-root/secret/client_secrets.json'
+
 ### The FAS group in which the admin of fedocal are
 ADMIN_GROUP='sysadmin-calendar'
 
@@ -39,28 +41,19 @@ PREFERRED_URL_SCHEME='https'
 
 # Make browsers send session cookie only via HTTPS
 SESSION_COOKIE_SECURE = True
-SESSION_COOKIE_PATH = '/calendar'
+SESSION_COOKIE_PATH = '/'
 SESSION_COOKIE_NAME = 'fedocal'
 
 # Used by SESSION_COOKIE_PATH
-APPLICATION_ROOT = '/calendar/'
+APPLICATION_ROOT = '/'
 
 {% if env == 'staging' %}
-APP_URL = 'https://apps.stg.fedoraproject.org/' + APPLICATION_ROOT
+APP_URL = 'https://calendar.stg.fedoraproject.org/' + APPLICATION_ROOT
 FAS_OPENID_ENDPOINT = 'https://id.stg.fedoraproject.org/openid/'
-SITE_ROOT = 'https://apps.stg.fedoraproject.org'
-SITE_URL = '%s/calendar' % SITE_ROOT
+SITE_ROOT = 'https://calendar.stg.fedoraproject.org'
+SITE_URL = '%s/' % SITE_ROOT
 {% else %}
-APP_URL = 'https://apps.fedoraproject.org/' + APPLICATION_ROOT
-SITE_ROOT = 'https://apps.fedoraproject.org'
-SITE_URL = '%s/calendar' % SITE_ROOT
-{% endif %}
-
-## URLs to fedmenu resources
-{% if env == 'staging' %}
-FEDMENU_URL = 'https://apps.stg.fedoraproject.org/fedmenu'
-FEDMENU_DATA_URL = 'https://apps.stg.fedoraproject.org/js/data.js'
-{% else %}
-FEDMENU_URL = 'https://apps.fedoraproject.org/fedmenu'
-FEDMENU_DATA_URL = 'https://apps.fedoraproject.org/js/data.js'
+APP_URL = 'https://calendar.fedoraproject.org/' + APPLICATION_ROOT
+SITE_ROOT = 'https://calendar.fedoraproject.org'
+SITE_URL = '%s/' % SITE_ROOT
 {% endif %}
