fedocal: secrets are not configMap
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/files/deploymentconfig.yml
+++ b/roles/openshift-apps/fedocal/files/deploymentconfig.yml
@@ -69,7 +69,7 @@ spec:
         configMap:
           name: fedocal-configmap
       - name: secret-volume
-        configMap:
+        secret:
           name: fedocal-secret
       - name: fedora-messaging-ca-volume
         secret:
